# INPAINTING

./: README.md
dataset/: README.md
dataset/brushbench/prompts/: 000000000.txt  000000001.txt  000000002.txt  000000003.txt  000000004.txt
dataset/editbench/prompts/: a=amber_o=vase_s=outdoor.txt  a=angular_o=rock_s=outdoor.txt  a=beige_o=jacket_s=outdoor.txt  a=beige~and~navy_o=letter_style=outdoor.txt  a=big_o=horse~head_s=outdoor.txt
dataset/fluxbench/prompts/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt
evaluation/: README.md  client_metrics.py  eval.py  pyproject.toml  requirements.txt
inference/: README.md  pyproject.toml  requirements.txt  rlbench_fill.py  rlbench_fill_grpo.py  rlbench_fill_sft.py  rlbench_prefpaint.py  rlbench_sd15.py  rlbench_sd15_grpo.py  rlbench_sd15_sft.py  run_flux.sh  run_prefpaint.sh  run_sd15.sh
inference_brushnet/: README.md  pyproject.toml  rlbench_brushnetx.py  run_brush.sh
inference_powerpaint/: README.md  pyproject.toml  rlbench_power.py  run_power.sh
reward_server/: README.md  bound.py  pyproject.toml  requirements_server.txt  server_aesthetic.py  server_clip.py  server_hpsv2.py  server_pickscore.py
reward_server_extra/: README.md
reward_server_extra/IR/: pyproject.toml  server_imagereward.py
reward_server_extra/hpsv3/: pyproject.toml  server_hpsv3.py
training/: README.md  pyproject.toml  requirements-lint.txt
training/docs/: data_preprocess.md  model_input_comparison.md
training/fastvideo/: README.md  train_dpo_flux_fill.py  train_dpo_sd_inpainting.py  train_grpo_flux_fill.py  train_grpo_sd_inpainting.py  train_sft_flux_fill.py  train_sft_sd_inpainting.py
training/fastvideo/config_sd/: dgx.py  dpo.py  inpainting.py  sft.py
training/fastvideo/data_preprocess/: preprocess_flux_embedding.py  preprocess_flux_fill_embeddings.py  preprocess_vae_latents.py
training/fastvideo/dataset/: __init__.py  latent_flux_fill_rl_datasets.py  latent_sd_inpainting_rl_datasets.py  transform.py
training/fastvideo/rewards/: __init__.py  reward.py  (+1 more)
(+18 files in other folders)
